# lucebox-hub

./: .gitmodules  AGENTS.md  CLAUDE.md  README.md
common/: README.md
dflash/: README.md
dflash/scripts/: bench_he.py
docs/results/: qwen35_0p8b_b200.md  qwen35_0p8b_gb10.md  qwen35_27b_b200.md
docs/roadmap/: lora_training_engine.md  qwen35_27b_on_sm100.md
experiments/tcgen05_gemm/: README.md  bench.py  bench_shapes.py  bench_sweep.py  probe.py  test.py  torch_bindings.cpp
lora_megakernel/: .gitignore  __init__.py  bench.py  rl_backend_adapter.py  setup.py
megakernel/: GB10_NVFP4_RESULTS.md  PARALLEL_SCAN_DESIGN.md  README.md  RESULTS_B200.md  bench_pp_tg.py  bench_shapes.py  dn_chunked.cu  dn_chunked_vsplit.cu  dn_parallel_scan.cu  dn_parallel_scan_proto.py  final_bench.py  kernel.cu  kernel_gb10_nvfp4.cu  model.py  model_nvfp4.py  prefill.cu  prefill_bw.cu  prefill_megakernel.cu  setup.py  torch_bindings.cpp
models/: README.md
models/qwen35_0p8b/: README.md  bench_pp_tg.py  fa_attn_aten.cpp  final_bench.py  kernel.cu  kernel_gb10_nvfp4.cu  model.py  prefill.cu  prefill_megakernel.cu  setup.py  torch_bindings.cpp
models/qwen35_0p8b/lora_toy/: README.md  kernel.cu  (+3 more)
models/qwen35_0p8b/trainer/cutlass_train/: CMakeLists.txt  README.md  deltanet_bwd.cu  fmha_bwd.cu  gemm_bf16_sm100.cu  setup.py  test_fa_bwd.py  test_gemm.py  torch_bindings.cpp
models/qwen35_27b/: .gitignore  CMakeLists.txt  RESULTS.md
prefill_megakernel/: README.md  bench.py  kernel.cu  model.py  setup.py  smoke.py  test_vs_existing_prefill.py
tcgen05_gemm/: README.md  bench.py  bench_shapes.py  bench_sweep.py  kernel.cu  probe_kstep.py  setup.py  test.py  torch_bindings.cpp
train_megakernel/: README.md  kernel.cu  setup.py  test_adamw.py  test_bwd_head.py  test_bwd_mlp.py  test_lora_forward.py  torch_bindings.cpp
(+89 files in other folders)
